--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.42",
-    "@studio-freight/react-lenis": "^0.0.46",
     "clsx": "^2.1.0",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
